--- a/_config.yml
+++ b/_config.yml
@@ -2,10 +2,10 @@ name: WP REST API v2 Documentation
 title: WP REST API v2 Documentation
 description: Documentation for version 2.0 of the WP REST API.
 # url: http://v2.wp-api.org/
-baseurl: /
+# baseurl: ''
 encoding: utf-8
 highlighter: pygments
-markdown: redcarpet
+# markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
 # markdown: kramdown
